k8s/apps/qbt/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qbt
spec:
  replicas: 0
  serviceName: qbt
  template:
    metadata:
      annotations:
        devices.crio.io: /dev/net/tun
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: melee
      securityContext:
        runAsGroup: 995
        fsGroup: 995
      dnsConfig:
        nameservers:
        - "1.1.1.1"
        - "8.8.8.8"
      dnsPolicy: None
      containers:
      - name: qbt
        image: ghcr.io/qbittorrent/docker-qbittorrent-nox:5.1.4-lt2-2@sha256:12af190f2c6581f7c2095edef3fdaf5da4d706972d14028c06ac28af65b002e4
        imagePullPolicy: IfNotPresent
        restartPolicy: OnFailure
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: srv
          subPath: film
          mountPath: /srv/film
        - name: srv
          subPath: tv
          mountPath: /srv/tv
        - name: srv
          subPath: downloads
          mountPath: /srv/downloads
        - name: config
          mountPath: /config
        securityContext:
          runAsUser: 65534
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
      volumes:
      - name: srv
        hostPath:
          path: /srv
          type: Directory
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      storageClassName: local-path
      accessModes:
      - ReadWriteOncePod
      resources:
        requests:
          storage: 16Mi
