k8s/apps/qbt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbt
spec:
  ports:
  - port: 80
    targetPort: 8080
