k8s/apps/qbt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbt
  annotations:
    tailscale.com/proxy-group: melee-svc
spec:
  defaultBackend:
    service:
      name: qbt
      port:
        number: 80
  ingressClassName: tailscale
  tls:
  - hosts:
    - q
